# kaidoki

./: .env.template  .gitignore  MERCARI_ANTI_DETECTION_SOLUTION.md  Makefile  README.md  architecture_design.md  architecture_diagnosis_report.md  architecture_evaluation_report.md  cli.py  comprehensive_deployment_script.py  debug_tool_parameter_validation.py  emergency_fix_scripts.md  error_handling_fix.py  headless_vs_non_headless_analysis.md  implementation_blueprint.md  implementation_roadmap.md  japanese_price_diagnosis.py  llm_recommendation_issue_analysis.md  llm_recommendation_real_issue_analysis.md  main.py  mercari.html  mercari_ai_agent_refactored_architecture_analysis.md  mercari_ai_agent_refactored_mock_data_architecture_analysis.md  mercari_ai_agent_system_repair_plan.md  mercari_anti_captcha_final_summary.md  mercari_anti_captcha_redesign_plan.md  mercari_anti_captcha_redesign_plan_part2.md  mercari_crawler_comprehensive_diagnosis_report.md  mercari_optimization_implementation.md  mercari_system_optimization_solution.md  pyproject.toml  run.py  session_manager_fix.py  simple_intelligent_rate_control_architecture.md  test_japanese_price_parsing.py  test_pure_api_scraper.py  test_session_api_scraper.py  verify_japanese_price_fix.py  反检测系统集成架构方案.md  反检测系统集成架构方案_总结.md  (+1 more)
mercari_ai_agent/: .gitignore  CHANGELOG.md  CODE_REVIEW_REPORT.md  CONTRIBUTING.md  Dockerfile  E2E_TEST_REPORT.md  LICENSE  MANIFEST.in  QUERY_PARAMETER_FIX_REPORT.md  QUICK_START_ANTI_DETECTION.md  README.md  README_PLUGIN_FRAMEWORK.md  SMART_COOKIE_IMPLEMENTATION_SUMMARY.md  SSL_CONNECTION_REPAIR_REPORT.md  SYSTEM_INTEGRATION_REPORT.md  captcha_bypass_strategy.py  captcha_system_usage.py  cli.py  deletion_checklist.md  deployment_validation_report.txt  docker-compose.yml  emergency_captcha_fix_deployment.py  emergency_fix_validation.py  integration_test.py  performance_benchmark.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  requirements_test.txt  setup.py  ssl_connection_test.py  test_api_compatibility_fix.py  test_browser_simulation.py  test_bug_fixes.py  test_compatibility_validation.py  test_data_parser.py  test_generate_recommendations.py  test_mercari_end_to_end.py  test_mercari_end_to_end_fixed.py  (+6 more)
mercari_ai_agent/config/: .env.template  README.md  anti_detection_config.yaml  captcha_system.yaml  cookie_management.yaml  development.yaml  production.yaml
mercari_ai_agent/docs/: SMART_COOKIE_MANAGEMENT.md
mercari_ai_agent/docs/plugins/: API_REFERENCE.md  FAQ.md  README.md
mercari_ai_agent/docs/plugins/examples/: integration_example.py
mercari_ai_agent/scripts/: deploy.sh  deployment_validation.py  integration_test.py  run_tests.py
mercari_ai_agent/src/mercari_agent/: __init__.py  main.py
mercari_ai_agent/src/mercari_agent/analyzers/: __init__.py  product_analyzer.py  ranking_system.py  scoring_engine.py
mercari_ai_agent/src/mercari_agent/captcha/: INTEGRATION_REPORT.md  UNIFIED_CAPTCHA_DETECTOR_DEPLOYMENT_REPORT.md  __init__.py  analytics.py  anti_detection_manager.py  async_gui_manager.py  captcha_config_manager.py  captcha_detector.py  captcha_detector_plugin.py  captcha_plugin_integration.py  captcha_solver.py  captcha_types.py  cleanup_optimization_report.json  cleanup_optimization_report.md  cli_captcha_handler.py  compatibility.py  component_factory.py  enhanced_anti_detection_manager.py  error_handler.py  integration_analysis_report.json  integration_analysis_report.md  integration_check_report.json  plugin_interface.py  plugin_registry.py  retry_coordinator.py  system.py  task_queue.py  ui_manager.py  unified_captcha_detector.py  unified_captcha_detector_plugin.py  unified_captcha_detector_test.py  unified_config_manager.py  unified_session_manager.py  workflow.py
mercari_ai_agent/src/mercari_agent/config/: __init__.py  anti_detection_config_manager.py  constants.py  settings.py  unified_config_manager.py
mercari_ai_agent/src/mercari_agent/core/: __init__.py  output_formatter.py  query_parser.py  recommendation_engine.py  tool_orchestrator.py
mercari_ai_agent/src/mercari_agent/debug/: __init__.py
mercari_ai_agent/src/mercari_agent/plugins/: __init__.py  framework.py  (+12 more)
mercari_ai_agent/tests/: README.md  __init__.py  cli_validation.py  conftest.py  e2e_validation.py  run_validation.py
mercari_ai_agent/tests/fixtures/: sample_data.py
mercari_ai_agent/tests/integration/: __init__.py  test_plugin_framework_integration.py  test_recommendation_flow.py  test_scraper_integration.py  test_tool_orchestration.py
mercari_ai_agent/tests/plugins/: __init__.py  conftest.py  test_config_manager.py  test_framework.py  test_runner.py  test_schemas.py  test_version_control.py
mercari_ai_agent/tests/unit/: __init__.py  test_anti_bot_handler.py  test_data_parser.py  test_llm_service.py  test_mercari_scraper.py  test_models.py  test_query_parser.py  test_scraper_utils.py  test_session_manager.py  test_tools.py
mercari_ai_agent/tests/utils/: __init__.py
mercari_ai_agent_refactored/: .env.template  .gitignore  CLI_FIXES_REPORT.md  COMPREHENSIVE_SYSTEM_INTEGRATION_TEST_REPORT.md  CORE_FUNCTIONALITY_VALIDATION_REPORT.md  FINAL_VALIDATION_REPORT.md  LLM_MIGRATION_COMPLETION_REPORT.md  MIGRATION_COMPLETION_REPORT.md  Makefile  PRODUCTION_DEPLOYMENT_READINESS_ASSESSMENT.md  README.md  SCRAPER_SERVICE_REFACTORING_REPORT.md  SYSTEM_REPAIR_COMPLETION_REPORT.md  comprehensive_system_test_suite.py  config_validation_report.json  config_validator.py  pyproject.toml  requirements.txt  run.py  simple_config_test.py  test_cli.py  test_cli_fixes.py  test_config_validation.py  test_dependencies.py  test_fingerprint_integration.py  test_llm_migration.py  test_llm_service.py  test_logging.py  test_output_formatter_service.py  test_query_parser.py  test_recommendation_service.py  test_scraper_service.py  test_startup_fixes.py  test_system_smoke.py
mercari_ai_agent_refactored/config/: development.json  production.json
mercari_ai_agent_refactored/tests/: integration_test.py  test_output_format.py  test_pipeline_tool.py  test_query_keywords.py  test_recommendation_parse.py
(+154 files in other folders)
