[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kaidoki"
version = "2.0.0"
description = "Kaidoki - 多数据源智能购物助手"
readme = "README.md"
license = "MIT"
authors = [{name = "Kaidoki contributors"}]
keywords = [
    "ai", "agent", "kaidoki", "mercari", "shopping", "llm", "scraping", "japanese", "nlp"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.35.0,<1",
    "boto3>=1.29.1,<2",
    "click>=8.1.7,<9",
    "fastapi>=0.104.1,<1",
    "httpx>=0.25.2,<1",
    "playwright>=1.40.0,<2",
    "psutil>=5.9.6,<8",
    "pydantic>=2.5.0,<3",
    "starlette>=0.27.0,<1",
    "uvicorn[standard]>=0.24.0,<1",
]

[project.optional-dependencies]
openai = [
    "openai>=1.52.2,<2",
]

[dependency-groups]
dev = [
    "black>=23.11.0,<26",
    "build>=1.2.2,<2",
    "flake8>=6.1.0,<8",
    "isort>=5.12.0,<7",
    "mypy>=1.7.1,<2",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
]

[project.urls]
Repository = "https://github.com/xingyu-zhou/kaidoki"
Issues = "https://github.com/xingyu-zhou/kaidoki/issues"

[project.scripts]
kaidoki = "kaidoki.interfaces.cli.main:cli"
kaidoki-api = "kaidoki.interfaces.api.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
kaidoki = ["py.typed", "*.yaml", "*.yml", "*.json"]

# Black 配置
[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# isort 配置
[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["kaidoki"]
known_third_party = ["fastapi", "pydantic", "sqlalchemy", "redis", "openai", "anthropic"]

# MyPy 配置
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "selenium.*",
    "playwright.*",
    "scrapy.*",
    "sudachipy.*",
    "janome.*",
    "fake_useragent.*",
    "cloudscraper.*",
]
ignore_missing_imports = true

# Pytest 配置
[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=src/kaidoki",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "e2e: marks tests as end-to-end tests",
    "llm: marks tests that require LLM API access",
    "scraping: marks tests that require web scraping",
]
asyncio_mode = "auto"

# Coverage 配置
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/migrations/*",
    "*/venv/*",
    "*/env/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

# Bandit 配置
[tool.bandit]
exclude_dirs = ["tests", "venv", "env"]
skips = ["B101", "B601"]

# Ruff 配置 (可选的 linter，比 flake8 更快)
[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["B011"]

[tool.ruff.isort]
known-first-party = ["kaidoki"]
