[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mercari-ai-agent"
version = "1.0.0"
description = "Mercari日本智能购物AI代理系统"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Mercari AI Agent Team", email = "team@mercari-ai-agent.com"},
]
maintainers = [
    {name = "Mercari AI Agent Team", email = "team@mercari-ai-agent.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Office/Business :: Financial :: Shopping",
    "Framework :: AsyncIO",
    "Framework :: FastAPI",
]
keywords = [
    "ai", "agent", "mercari", "shopping", "recommendation",
    "scraping", "nlp", "japanese", "e-commerce", "analysis"
]
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "click>=8.1.0",
    "aiohttp>=3.9.0",
    "httpx>=0.25.0",
    "scrapy>=2.11.0",
    "selenium>=4.15.0",
    "beautifulsoup4>=4.12.0",
    "openai>=1.3.0",
    "anthropic>=0.7.0",
    "sudachipy>=0.6.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.0",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "cryptography>=41.0.0",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/your-org/mercari-ai-agent"
Documentation = "https://mercari-ai-agent.readthedocs.io/"
Repository = "https://github.com/your-org/mercari-ai-agent"
Issues = "https://github.com/your-org/mercari-ai-agent/issues"
Changelog = "https://github.com/your-org/mercari-ai-agent/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=1.3.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "coverage>=7.3.0",
    "factory-boy>=3.3.0",
    "faker>=20.1.0",
    "responses>=0.24.0",
]
docs = [
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",
    "sphinx-autodoc-typehints>=1.25.0",
]
performance = [
    "line-profiler>=4.1.0",
    "memory-profiler>=0.61.0",
    "py-spy>=0.3.0",
    "locust>=2.17.0",
]
monitoring = [
    "prometheus-client>=0.19.0",
    "sentry-sdk>=1.38.0",
    "grafana-api>=1.0.0",
]

[project.scripts]
mercari-agent = "mercari_agent.main:main"
mercari-ai-agent = "mercari_agent.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mercari_agent = ["config/*.yaml", "config/*.json", "data/*.json"]

# 测试配置
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--tb=short",
    "--cov=mercari_agent",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
]
markers = [
    "unit: 单元测试",
    "integration: 集成测试",
    "slow: 慢速测试",
    "network: 需要网络的测试",
    "external: 依赖外部服务的测试",
]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::UserWarning:requests.*",
]

# 覆盖率配置
[tool.coverage.run]
source = ["src/mercari_agent"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

# Black代码格式化
[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

# isort导入排序
[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
src_paths = ["src", "tests"]
skip_glob = ["*/migrations/*"]
known_first_party = ["mercari_agent"]
known_third_party = [
    "fastapi", "uvicorn", "pydantic", "click", "aiohttp", "httpx",
    "scrapy", "selenium", "beautifulsoup4", "openai", "anthropic",
    "sudachipy", "numpy", "pandas", "redis", "sqlalchemy", "pytest"
]

# MyPy类型检查
[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
show_error_context = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "scrapy.*",
    "selenium.*",
    "sudachipy.*",
    "mecab.*",
    "janome.*",
    "fake_useragent.*",
    "cloudscraper.*",
]
ignore_missing_imports = true

# Flake8配置
[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "E266", "E501", "W503"]
max-complexity = 10
select = ["B", "C", "E", "F", "W", "T4", "B9"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    ".tox",
    ".eggs",
    "*.egg",
    "migrations",
]

# Bandit安全检查
[tool.bandit]
exclude_dirs = ["tests", "build", "dist"]
skips = ["B101", "B601"]

# 依赖管理
[tool.pip-tools]
generate-hashes = true
upgrade = true
annotate = true

# 版本管理
[tool.bumpversion]
current_version = "1.0.0"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "src/mercari_agent/__init__.py"
search = "__version__ = \"{current_version}\""
replace = "__version__ = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = "version = \"{current_version}\""
replace = "version = \"{new_version}\""

# 文档配置
[tool.sphinx]
source-dir = "docs/source"
build-dir = "docs/build"
all_files = true
extensions = [
    "sphinx.ext.autodoc",
    "sphinx.ext.viewcode",
    "sphinx.ext.napoleon",
    "sphinx_rtd_theme",
    "myst_parser",
]