[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mercari-ai-agent"
version = "2.0.0"
description = "Mercari AI Agent - 重构版智能购物助手系统"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Mercari AI Agent Team", email = "team@mercari-ai-agent.com"}
]
maintainers = [
    {name = "Mercari AI Agent Team", email = "team@mercari-ai-agent.com"}
]
keywords = [
    "ai", "agent", "mercari", "shopping", "llm", "scraping", "japanese", "nlp"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.11"
dependencies = [
    # Web框架
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # CLI工具
    "click>=8.1.7",
    "rich>=13.7.0",
    
    # 异步支持
    "aiohttp>=3.9.1",
    "aiofiles>=23.2.1",
    
    # HTTP客户端
    "httpx>=0.25.2",
    "requests>=2.31.0",
    
    # 网页爬虫
    "selenium>=4.15.2",
    "beautifulsoup4>=4.12.2",
    "lxml>=4.9.3",
    "playwright>=1.40.0",
    
    # 反爬虫和代理
    "fake-useragent>=1.4.0",
    "cloudscraper>=1.2.71",
    
    # 机器学习和数据分析
    "scikit-learn>=1.3.2",
    "joblib>=1.3.2",
    
    # 图像处理
    "Pillow>=10.1.0",
    
    # LLM API客户端
    "openai>=1.12.0",
    "anthropic>=0.18.0",
    
    # 日语文本处理
    "sudachipy>=0.6.7",
    "janome>=0.5.0",
    
    # 数据存储
    "redis>=5.0.1",
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.23",
    "alembic>=1.13.0",
    
    # 缓存
    "cachetools>=5.3.2",
    
    # 配置管理
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    
    # 日志记录
    "loguru>=0.7.2",
    "structlog>=23.2.0",
    
    # 监控和指标
    "prometheus-client>=0.19.0",
    
    # 类型检查
    "typing-extensions>=4.8.0",
    
    # 日期时间处理
    "python-dateutil>=2.8.2",
    "pytz>=2023.3",
    
    # JSON处理
    "orjson>=3.9.10",
    
    # 加密和安全
    "cryptography>=41.0.0",
    "passlib>=1.7.4",
    
    # 网络工具
    "dnspython>=2.4.2",
    
    # 进程管理
    "psutil>=5.9.6",
    
    # 数据验证
    "marshmallow>=3.20.1",
    
    # 工具库
    "more-itertools>=10.1.0",
    
    # 时间处理
    "arrow>=1.3.0",
    
    # 字符串处理
    "fuzzywuzzy>=0.18.0",
    "python-Levenshtein>=0.23.0",
    
    # 模板引擎
    "jinja2>=3.1.2",
    
    # 语言检测
    "langdetect>=1.0.9",
    
    # 编码检测
    "chardet>=5.2.0",
    
    # 环境变量
    "environs>=10.3.0",
    
    # 数据格式
    "msgpack>=1.0.7",
    
    # 版本管理
    "packaging>=23.2",
]

[project.optional-dependencies]
dev = [
    # 测试
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "pytest-xdist>=3.3.0",
    "pytest-benchmark>=4.0.0",
    
    # 代码质量
    "black>=23.7.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "bandit>=1.7.5",
    
    # 文档
    "sphinx>=7.2.6",
    "sphinx-rtd-theme>=1.3.0",
    
    # 调试工具
    "ipdb>=0.13.13",
    "memory-profiler>=0.61.0",
    "py-spy>=0.3.14",
    
    # 开发工具
    "pre-commit>=3.3.0",
    "tox>=4.6.0",
]

test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "pytest-xdist>=3.3.0",
    "pytest-benchmark>=4.0.0",
]

docs = [
    "sphinx>=7.2.6",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/mercari-ai-agent/mercari-ai-agent"
Documentation = "https://mercari-ai-agent.readthedocs.io/"
Repository = "https://github.com/mercari-ai-agent/mercari-ai-agent.git"
Issues = "https://github.com/mercari-ai-agent/mercari-ai-agent/issues"
Changelog = "https://github.com/mercari-ai-agent/mercari-ai-agent/blob/main/CHANGELOG.md"

[project.scripts]
mercari-agent = "mercari_agent.main:main"
mercari-api = "mercari_agent.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mercari_agent = ["py.typed", "*.yaml", "*.yml", "*.json"]

# Black 配置
[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# isort 配置
[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["mercari_agent"]
known_third_party = ["fastapi", "pydantic", "sqlalchemy", "redis", "openai", "anthropic"]

# MyPy 配置
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "selenium.*",
    "playwright.*",
    "scrapy.*",
    "sudachipy.*",
    "janome.*",
    "fake_useragent.*",
    "cloudscraper.*",
]
ignore_missing_imports = true

# Pytest 配置
[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=src/mercari_agent",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "e2e: marks tests as end-to-end tests",
    "llm: marks tests that require LLM API access",
    "scraping: marks tests that require web scraping",
]
asyncio_mode = "auto"

# Coverage 配置
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/migrations/*",
    "*/venv/*",
    "*/env/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

# Bandit 配置
[tool.bandit]
exclude_dirs = ["tests", "venv", "env"]
skips = ["B101", "B601"]

# Ruff 配置 (可选的 linter，比 flake8 更快)
[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["B011"]

[tool.ruff.isort]
known-first-party = ["mercari_agent"]
